--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".single_movie_details.SingleMovie">
+    tools:context=".ui.single_movie_details.SingleMovie">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@ android:orientation="vertical"
 
         >
         <ProgressBar
+            android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -39,6 +40,7 @@ android:orientation="vertical"
                 >
                 <ImageView
                     android:layout_width="match_parent"
+                    android:id="@+id/iv_movie_poster"
                     android:layout_height="500dp"
                 android:layout_gravity="center"
                     android:scaleType="matrix"
